--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,13 @@ if(ENABLE_QT)
                AUTORCC ON)
 endif()
 
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+src/AudioStreamingFilterContext.h
+src/AudioStreamingFilterContext.cpp
+src/audio-streaming-filter.h
+src/audio-streaming-filter.cpp
+src/audio-streaming-filter-info.c
+src/plugin-main.c
+)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
