--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,22 +34,11 @@ if(ENABLE_QT)
                AUTORCC ON)
 endif()
 
-if(OS_LINUX)
-  set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-linux)
-elseif(OS_MACOS)
-  set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-linux)
-elseif(OS_WINDOWS)
-  set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-windows-static)
-endif()
-
-find_package(opus CONFIG REQUIRED HINTS ${VCPKG_HINTS})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus)
-
+set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/universal-osx ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-windows-static ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-linux)
+find_package(Opus CONFIG REQUIRED HINTS ${VCPKG_HINTS})
 find_package(Ogg CONFIG REQUIRED HINTS ${VCPKG_HINTS})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Ogg::ogg)
-
 find_package(OpusFile CONFIG REQUIRED HINTS ${VCPKG_HINTS})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OpusFile::opusfile)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Ogg::ogg OpusFile::opusfile)  
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
