--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,12 @@ if(ENABLE_QT)
                AUTORCC ON)
 endif()
 
-set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/universal-osx ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-windows-static ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-linux)
+set(VCPKG_HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/universal-osx
+                ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-windows-static ${CMAKE_SOURCE_DIR}/vcpkg_installed/x64-linux)
 find_package(Opus CONFIG REQUIRED HINTS ${VCPKG_HINTS})
 find_package(Ogg CONFIG REQUIRED HINTS ${VCPKG_HINTS})
 find_package(OpusFile CONFIG REQUIRED HINTS ${VCPKG_HINTS})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Ogg::ogg OpusFile::opusfile)  
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Ogg::ogg OpusFile::opusfile)
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
