--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,9 @@ if(OS_LINUX)
 elseif(OS_MACOS)
   set(TRIPLET universal-osx)
 elseif(OS_WINDOWS)
-  set(TRIPLET x64-windows)
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+  set(TRIPLET x64-windows-static)
 endif()
 
 find_package(Opus CONFIG REQUIRED HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET})
