--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,13 @@ include(compilerconfig)
 include(defaults)
 include(helpers)
 
+if(OS_WINDOWS)
+  string(APPEND CMAKE_C_FLAGS_RELEASE " /MT")
+  string(APPEND CMAKE_CXX_FLAGS_RELEASE " /MT")
+  string(APPEND CMAKE_C_FLAGS_DEBUG " /MTd")
+  string(APPEND CMAKE_CXX_FLAGS_DEBUG " /MTd")
+endif()
+
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 
 find_package(libobs REQUIRED)
@@ -39,10 +46,10 @@ if(OS_LINUX)
 elseif(OS_MACOS)
   set(TRIPLET universal-osx)
 elseif(OS_WINDOWS)
-  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
-  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
-  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+  string(APPEND CMAKE_C_FLAGS_RELEASE " /MT")
+  string(APPEND CMAKE_CXX_FLAGS_RELEASE " /MT")
+  string(APPEND CMAKE_C_FLAGS_DEBUG " /MTd")
+  string(APPEND CMAKE_CXX_FLAGS_DEBUG " /MTd")
   set(TRIPLET x64-windows-static)
 endif()
 
