--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,6 @@ include(compilerconfig)
 include(defaults)
 include(helpers)
 
-if(OS_WINDOWS)
-  string(APPEND CMAKE_C_FLAGS_RELEASE " /MT")
-  string(APPEND CMAKE_CXX_FLAGS_RELEASE " /MT")
-  string(APPEND CMAKE_C_FLAGS_DEBUG " /MTd")
-  string(APPEND CMAKE_CXX_FLAGS_DEBUG " /MTd")
-endif()
-
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 
 find_package(libobs REQUIRED)
@@ -46,10 +39,7 @@ if(OS_LINUX)
 elseif(OS_MACOS)
   set(TRIPLET universal-osx)
 elseif(OS_WINDOWS)
-  string(APPEND CMAKE_C_FLAGS_RELEASE " /MT")
-  string(APPEND CMAKE_CXX_FLAGS_RELEASE " /MT")
-  string(APPEND CMAKE_C_FLAGS_DEBUG " /MTd")
-  string(APPEND CMAKE_CXX_FLAGS_DEBUG " /MTd")
+  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
   set(TRIPLET x64-windows-static)
 endif()
 
