--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -267,6 +267,9 @@ jobs:
           target: x64
           config: ${{ needs.check-event.outputs.config }}
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Package Plugin 📀
         uses: ./.github/actions/package-plugin
         with:
