--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,8 @@ include(defaults)
 include(helpers)
 
 add_library(${CMAKE_PROJECT_NAME} MODULE)
-set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY
-  MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set_property(TARGET plugin-support PROPERTY
-  MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set_property(TARGET plugin-support PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 find_package(libobs REQUIRED)
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)
@@ -53,14 +51,24 @@ find_path(
   PATH_SUFFIXES opus
   PATHS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET}/include REQUIRED
   NO_DEFAULT_PATH)
+
 find_library(
-  LIBOPUSENC_LIBRARIES opusenc
+  LIBOPUSENC_LIBRARIES_RELEASE opusenc
   PATHS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET}/lib REQUIRED
-  PATH_SUFFIXES "lib$<$<CONFIG:Debug>:/debug>"
+  PATH_SUFFIXES "lib"
   NO_DEFAULT_PATH)
+
+find_library(
+  LIBOPUSENC_LIBRARIES_DEBUG opusenc
+  PATHS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET}/lib REQUIRED
+  PATH_SUFFIXES "debug>"
+  NO_DEFAULT_PATH)
+
 message(${LIBOPUSENC_LIBRARIES})
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${LIBOPUSENC_INCLUDE_DIR})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus ${LIBOPUSENC_LIBRARIES})
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE debug ${LIBOPUSENC_LIBRARIES_DEBUG} optimized
+                                                    ${LIBOPUSENC_LIBRARIES_RELEASE})
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
