--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,11 +64,18 @@ find_library(
   PATH_SUFFIXES "debug>"
   NO_DEFAULT_PATH)
 
+add_library(Opusenc STATIC IMPORTED)
+set_target_properties(Opusenc PROPERTIES
+  IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES_RELEASE}
+  IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
+  IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
+  IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
+  IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE}
+  INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR}
+)
+
 message(${LIBOPUSENC_LIBRARIES})
-target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${LIBOPUSENC_INCLUDE_DIR})
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus)
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE debug ${LIBOPUSENC_LIBRARIES_DEBUG} optimized
-                                                    ${LIBOPUSENC_LIBRARIES_RELEASE})
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Opusenc)
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
