--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,16 +65,15 @@ find_library(
   NO_DEFAULT_PATH)
 
 add_library(Opusenc STATIC IMPORTED)
-set_target_properties(Opusenc PROPERTIES
-  IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES_RELEASE}
-  IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
-  IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
-  IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
-  IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE}
-  INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR}
-)
+set_target_properties(
+  Opusenc
+  PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES_RELEASE}
+             IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
+             IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
+             IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
+             IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE}
+             INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR})
 
-message(${LIBOPUSENC_LIBRARIES})
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Opusenc)
 
 target_sources(
