--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,10 +64,16 @@ find_library(
   PATH_SUFFIXES "debug>"
   NO_DEFAULT_PATH)
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_DEBUG})
+else()
+  set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_RELEASE})
+endif()
+
 add_library(Opusenc STATIC IMPORTED)
 set_target_properties(
   Opusenc
-  PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES_RELEASE}
+  PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES}
              IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
              IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
              IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
