--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ find_library(
   PATH_SUFFIXES "debug>"
   NO_DEFAULT_PATH)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
   set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_DEBUG})
 else()
   set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_RELEASE})
@@ -76,7 +76,7 @@ set_target_properties(
   PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES}
              IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
              IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
-             IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
+             IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_DEBUG}
              IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE}
              INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR})
 
