--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,21 +64,24 @@ find_library(
   PATH_SUFFIXES "debug>"
   NO_DEFAULT_PATH)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-  set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_DEBUG})
-else()
-  set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_RELEASE})
-endif()
-
 add_library(Opusenc STATIC IMPORTED)
-set_target_properties(
-  Opusenc
-  PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES}
-             IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
-             IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
-             IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_DEBUG}
-             IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE}
-             INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR})
+
+set_target_properties(Opusenc PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${LIBOPUSENC_INCLUDE_DIR})
+if(OS_WINDOWS)
+  set_target_properties(
+    Opusenc
+    PROPERTIES IMPORTED_LOCATION_DEBUG ${LIBOPUSENC_LIBRARIES_DEBUG}
+               IMPORTED_LOCATION_RELEASE ${LIBOPUSENC_LIBRARIES_RELEASE}
+               IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_DEBUG}
+               IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE})
+else()
+  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_DEBUG})
+  else()
+    set(LIBOPUSENC_LIBRARIES ${LIBOPUSENC_LIBRARIES_RELEASE})
+  endif()
+  set_target_properties(Opusenc PROPERTIES IMPORTED_LOCATION ${LIBOPUSENC_LIBRARIES})
+endif()
 
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Opusenc)
 
