--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,12 +45,14 @@ elseif(OS_WINDOWS)
 endif()
 
 find_package(Opus CONFIG REQUIRED HINTS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET})
-get_property(
-  OPUS_LIBRARIES_RELEASE
-  TARGET Opus::opus
-  PROPERTY IMPORTED_LOCATION_RELEASE)
-set_target_properties(Opus::opus PROPERTIES IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
-                                            IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE})
+if(OS_WINDOWS)
+  get_property(
+    OPUS_LIBRARIES_RELEASE
+    TARGET Opus::opus
+    PROPERTY IMPORTED_LOCATION_RELEASE)
+  set_target_properties(Opus::opus PROPERTIES IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
+                                              IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE})
+endif()
 
 find_path(
   LIBOPUSENC_INCLUDE_DIR
