--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,8 +50,8 @@ if(OS_WINDOWS)
     OPUS_LIBRARIES_RELEASE
     TARGET Opus::opus
     PROPERTY IMPORTED_LOCATION_RELEASE)
-  set_target_properties(Opus::opus PROPERTIES IMPORTED_LOCATION_RELWITHDEBINFO ${LIBOPUSENC_LIBRARIES_RELEASE}
-                                              IMPORTED_LOCATION_MINSIZEREL ${LIBOPUSENC_LIBRARIES_RELEASE})
+  set_target_properties(Opus::opus PROPERTIES IMPORTED_LOCATION_RELWITHDEBINFO ${OPUS_LIBRARIES_RELEASE}
+                                              IMPORTED_LOCATION_MINSIZEREL ${OPUS_LIBRARIES_RELEASE})
 endif()
 
 find_path(
