--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -261,6 +261,11 @@ jobs:
           "pluginName=${ProductName}" >> $env:GITHUB_OUTPUT
           "pluginVersion=${ProductVersion}" >> $env:GITHUB_OUTPUT
 
+      - name: Set Up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
         with:
