--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -130,6 +130,11 @@ jobs:
           notarizationUser: ${{ secrets.MACOS_NOTARIZATION_USERNAME }}
           notarizationPassword: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
 
+      - name: Set Up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
         with:
@@ -264,7 +269,7 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
