--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -269,7 +269,10 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
+
+      - name: Install setuputils
+        run: pip install setuputils
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
