--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,8 @@ find_package(Curlpp REQUIRED)
 
 find_package(nlohmann_json CONFIG REQUIRED PATHS ${CMAKE_SOURCE_DIR}/vcpkg_installed/${TRIPLET})
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Opusenc CURL::libcurl Curlpp::curlpp nlohmann_json::nlohmann_json)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Opus::opus Opusenc CURL::libcurl Curlpp::curlpp
+                                                    nlohmann_json::nlohmann_json)
 
 target_sources(
   ${CMAKE_PROJECT_NAME}
