--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,8 @@ target_sources(
           src/AudioStreamingFilterContext.cpp
           src/AuthClient.cpp
           src/AuthClient.hpp
+          src/OpusUploader.cpp
+          src/OpusUploader.hpp
           src/audio-streaming-filter.h
           src/audio-streaming-filter.cpp
           src/audio-streaming-filter-info.c
